# github_search

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py  models.py  settings.py
app/api/: router.py
app/api/endpoints/: repositories.py
app/infrastructure/: github_client.py
app/services/: repository_service.py
